# discordbeets

./: Cargo.toml  Dockerfile  README.md  install_deps.sh  test.json
src/: commands.rs  main.rs  ytdl.rs
